Add replacement for PrintGCTimeStamps